--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
 }
 
 android {
-    namespace 'com.example.prueba_acceso_movilidad_proconsi'
+    namespace 'com.example.androidboosttraining'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.prueba_acceso_movilidad_proconsi"
+        applicationId "com.example.androidboosttraining"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -30,6 +31,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures{
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -38,6 +42,18 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    //con estas dos implementaciones podemos procesar imagenes a traves de la web
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+    //implementaciones para peticiones a API
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
