--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "prueba_acceso_movilidad_proconsi"
+rootProject.name = "AndroidBoostTraining"
 include ':app'
