--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,14 +45,19 @@ dependencies {
 
     //con estas dos implementaciones podemos procesar imagenes a traves de la web
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     //implementaciones para peticiones a API
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    //
+    //Para utilizar corrutinas
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    
+
+    //Para android material
+    implementation 'com.google.android.material:material:1.7.0'
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
