--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.jcvacio'
+    namespace 'com.example.aplicacionciudades'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.jcvacio"
+        applicationId "com.example.aplicacionciudades"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -54,6 +54,8 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.1.1'
+    //Libreria para cargar imagenes
+    implementation("io.coil-kt:coil-compose:2.2.2")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
