Respuesta API no ok
La Api no me devuelve el listado de fichas correctamente

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,9 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
     //Libreria LiveData
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
-
+    //Serializable
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1")
+    implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
