--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     //Serializable
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1")
+    //Navigation
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
